--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1157,12 +1157,12 @@ body {
 }
 
 .about--banner h2 {
-    position: relative;
+   position: relative;
     margin-top: 35px;
-    font-size: 50px;
+    font-size: 45px;
     font-weight: 900;
-    line-height: 1;
-    z-index: 1
+    line-height: 75px;
+    z-index: 1;
 }
 
 .about--banner h2::before {
